cursor issue on mobile

--- a/src/components/CustomCursor/style.css
+++ b/src/components/CustomCursor/style.css
@@ -1,12 +1,20 @@
+/* Custom cursor style */
 .app-cursor {
     z-index: 1000;
     border-radius: 50%;
     width: 90px;
     height: 90px;
-    background-color: white; /* Default color */
+    background-color: white;
     pointer-events: none;
     overflow: hidden;
     transform: translate3d(0, 0, 0);
     position: fixed;
-    transition: background-color 0.3s ease; /* Smooth transition for color change */
+    display: block;
+}
+
+/* Hide cursor on screens smaller than 768px */
+@media (max-width: 768px) {
+    .app-cursor {
+        display: none;
+    }
 }
